@@ -36,6 +36,8 @@ typedef struct
   int32 psg_preamp;
   int32 fm_preamp;
   uint8 filter;
+  uint16 low_freq;
+  uint16 high_freq;
   float lg;
   float mg;
   float hg;
