@@ -87,11 +87,10 @@ extern int32 current_z80;
 extern uint8 system_hw;
 
 /* Function prototypes */
-extern void audio_init_equalizer(void);
-extern void audio_set_equalizer(void);
 extern int audio_init (int rate);
 extern void audio_shutdown (void);
 extern void audio_update (int len);
+extern void audio_set_equalizer(void);
 extern void system_init (void);
 extern void system_reset (void);
 extern void system_shutdown (void);
